WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293968
REGRESSION(
295633@main-295637@main
): Broke TestWebKitAPI.ActionSheetTests.DataDetectorsLinkIsNotPresentedAsALink
https://bugs.webkit.org/show_bug.cgi?id=293968
Summary
REGRESSION(295633@main-295637@main): Broke TestWebKitAPI.ActionSheetTests.Dat...
Megan Gardner
Reported
2025-06-03 11:24:28 PDT
REGRESSION(
295633@main-295637@main
): Broke TestWebKitAPI.ActionSheetTests.DataDetectorsLinkIsNotPresentedAsALink
Attachments
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2025-06-03 11:24:29 PDT
<
rdar://problem/152449697
>
Megan Gardner
Comment 2
2025-06-03 11:26:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46266
EWS
Comment 3
2025-06-03 15:43:22 PDT
Committed
295779@main
(73dbb82c87fa): <
https://commits.webkit.org/295779@main
> Reviewed commits have been landed. Closing PR #46266 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug