REGRESSION(295633@main-295637@main): Broke TestWebKitAPI.ActionSheetTests.DataDetectorsLinkIsNotPresentedAsALink https://bugs.webkit.org/show_bug.cgi?id=293968 rdar://152449697

Reviewed by Abrar Rahman Protyasha.

When I made a bunch of changes to use TextIndicator instead
of TextIndicatorData I didn't do enough null checks to keep
things working properly. This should fix those issues.

* Source/WebKit/UIProcess/ios/WKActionSheetAssistant.mm:
(-[WKActionSheetAssistant contextMenuInteraction:configurationForMenuAtLocation:]):
* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView dataDetectionContextForPositionInformation:]):
(-[WKContentView _createTargetedContextMenuHintPreviewIfPossible]):
* Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::linkIndicatorPositionInformation):
(WebKit::WebPage::positionInformation):

Canonical link: https://commits.webkit.org/295779@main